--- a/posts/new-test-post/index.ipynb
+++ b/posts/new-test-post/index.ipynb
@@ -156,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ml-0451",
    "language": "python",
    "name": "python3"
   },
@@ -170,12 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "debe06cc0f9553f110b64dc3926c05df82dae2145b852c8422b9c04315589dcb"
-   }
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
