--- a/posts/blog1/index.ipynb
+++ b/posts/blog1/index.ipynb
@@ -12,7 +12,7 @@
     "title: Classifying Palmer Penguins\n",
     "author: Emmanuel Towner\n",
     "date: '2025-02-12'\n",
-    "image: \"image.jpg\"\n",
+    "image: \"penguins.jpg\"\n",
     "description: \"Blog Post 1\"\n",
     "format: html\n",
     "---"
@@ -25,13 +25,11 @@
     "---\n",
     "fig-cap-location: margin\n",
     "code-fold: false\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "---\n",
+    "\n",
+    "![Image source: \\@gabednick](https://www.gabemednick.com/post/penguin/featured.png)\n",
+    "\n",
+    "\n",
     "### Abstract\n",
     "\n",
     "In this blog post, I take the Palmer Penguins dataset and try to determine the best features to be used to determine the species of a penguin based on its measurements. Firstly, I create two figures and a table to analysize the relationships between features. Then I use sci-kit learns feature selection with chi-squared tests to pick 2 numerical features and 1 categorical feature. Then using those features, I train and test a logistic regression model. The model was fairly accurate but to understand the results better, I plot the decision regions and use a confusion matrix. "
