Initial Blog post 1 revisions

--- a/posts/blog1/index.ipynb
+++ b/posts/blog1/index.ipynb
@@ -26,11 +26,11 @@
     "fig-cap-location: margin\n",
     "code-fold: false\n",
     "---\n",
+    "# Classifying Palmer Penguins\n",
     "\n",
     "![Image source: \\@gabednick](https://www.gabemednick.com/post/penguin/featured.png)\n",
     "\n",
-    "\n",
-    "### Abstract\n",
+    "## Abstract\n",
     "\n",
     "In this blog post, I take the Palmer Penguins dataset and try to determine the best features to be used to determine the species of a penguin based on its measurements. Firstly, I create two figures and a table to analysize the relationships between features. Then I use sci-kit learns feature selection with chi-squared tests to pick 2 numerical features and 1 categorical feature. Then using those features, I train and test a logistic regression model. The model was fairly accurate but to understand the results better, I plot the decision regions and use a confusion matrix. "
    ]
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Preparation\n",
+    "## Data Preparation\n",
     "\n",
     "This is code from Professor Phil's website. It removes the columns that we don't use and NA values, converts the categorical feature columns into \"one-hot encoded\" 0-1 columns and saves the dataframe X_train. Also, \"Species\" is coded with the LabelEncoder and is saved as y_train."
    ]
@@ -449,7 +449,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Visualization\n",
+    "## Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figures\n",
     "\n",
     "I created two graphs each 2 quantative columns and 1 qualitative columns. Plot 1 shows the relationship with the body mass and flipper length between different penguin species. Plot 2 shows the difference in Culmen Length and depth across different penguin species.\n"
    ]
@@ -500,15 +507,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Left side: Plot 1. The Gentoo penguins tend to be the biggest while Chinstrap and Adelie seem to have a great overlap in size. The Adelie seem to have slightly more variety in mass given a flipper length compared to Chinstrap. \n",
+    "Left side: Plot 1. The Gentoo penguins tend to be the biggest while Chinstrap and Adelie seem to have a great overlap in size. The Adelie seem to have slightly more variety in mass given a flipper length compared to Chinstrap. This is features seem decent for selection because there is some correlation between species and body size but they are not easily distinguishable by species.\n",
     "\n",
-    "Right side: Plot 2. Based on the graph, the each specie of penguin seemed to have distinct beaks. The Adelie have greatest culmen depth but shortest length. The Gentoo have longer culmens but not as much depth and the Chinstrap lie in the middle with medium to large culmens."
+    "Right side: Plot 2. Based on the graph, the each specie of penguin seemed to have distinct beaks. The Adelie have greatest culmen depth but shortest length. The Gentoo have longer culmens but not as much depth and the Chinstrap lie in the middle with medium to large culmens. These are good features because there is a clear distinction in culmen sizes between species of penquins."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Table\n",
     "Now I create a summary table of the penguins measurements based on clutch completetion. "
    ]
   },
@@ -654,9 +662,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature selection \n",
+    "## Feature selection \n",
     "\n",
-    "Here I use sci-kits SelectKBest to pick the 3 feautures I'm going to use for my model. I had to seperate feature selection because all 3 selected features would be numerical. "
+    "Here I use sci-kits SelectKBest to pick the 3 feautures I'm going to use for my model. I had to seperate feature selection because all 3 selected features would be numerical. SelectKBest selects the k best features based on user specified scoring function. I used chi-squared since my feautres were meant for classification and they were non-negative.  "
    ]
   },
   {
@@ -733,9 +741,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training\n",
+    "So despite the culmen sizes being appearing to be better features, based on the statistical tests the flipper length and body mass were better features. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
     "\n",
-    "The model is trained on the data with features determined from above. I had to use StandardScalar to avoid a convergence error."
+    "The model is trained on the data with features determined from above. I had to use StandardScalar to avoid a convergence error. I used the Logistic Regression model as it is a good fit for classification. "
    ]
   },
   {
@@ -769,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing"
+    "## Testing"
    ]
   },
   {
@@ -800,6 +815,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Plotting Decision Regions \n",
     "\n",
     "Most of this code is adapted from Prof. Phil's website."
@@ -807,20 +829,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "from matplotlib.patches import Patch\n",
     "\n",
     "def plot_regions(model, X, y):\n",
@@ -932,7 +946,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Confusion Matrix"
+    "Looking at these decision plots, we see that our model is pretty successful determing of the difference between Gentoo and Adelie on the Biscoe and Torgersen islands. However, on the Dream island, there is a mixture of Gentoo and Chinstrap where the model the struggles to distinguish between the two. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
    ]
   },
   {
@@ -964,7 +985,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Discussion\n",
+    "Once again, this shows that model struggled the most with Gentoo and Chinstrap. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discussion\n",
     "\n",
     "The model had very similar training and testing accuracy of 0.89. This means the model is fairly solid at predicting penguins based on the flipper lenth, body mass and island. Based on the decision regions, the model struggled to correctly determine the difference between Chinstrap and Gentoo on the Island Dream. It seems that those 2 species are of similar sizes and therefore are hard to differentiate. \n",
     "\n",
