--- a/posts/blog8/index.ipynb
+++ b/posts/blog8/index.ipynb
@@ -23,13 +23,26 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# Advanced Optimization: Newton’s Method and Adam"
+    "# Advanced Optimization: Newton’s Method and Adam\n",
+    "\n",
+    "## Abstract"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": []
