Implmented most of blog8

--- a/posts/Advanced Optimization/index.ipynb
+++ b/posts/Advanced Optimization/index.ipynb
@@ -25,7 +25,9 @@
    "source": [
     "# Advanced Optimization: Newton’s Method and Adam\n",
     "\n",
-    "## Abstract"
+    "## Abstract\n",
+    "\n",
+    "In this blog post, I explore advanced optimization techniques—Newton’s Method and the Adam optimizer—in the context of logistic regression applied to heart disease prediction. Through a series of experiments on a Kaggle heart dataset, I investigate the convergence behavior, sensitivity to learning rates, and efficiency of these methods. The three optimizers I work with are Newton's method, Adam, and gradient descent. The goal is to understand how different optimization algorithms influence model performance and training dynamics in a binary classification tasks."
    ]
   },
   {
@@ -192,7 +194,8 @@
     "ax.set_xlabel(\"Iterations\")\n",
     "ax.set_ylabel(\"Loss\")\n",
     "ax.set_title(\"Loss vs Iterations\")\n",
-    "ax.legend([\"Train Loss\", \"Test Loss\"])\n"
+    "ax.legend([\"Train Loss\", \"Test Loss\"])\n",
+    "plt.show()"
    ]
   },
   {
@@ -273,7 +276,7 @@
     "ax[1].set_ylabel(\"Loss\")\n",
     "ax[1].set_title(\"Gradient Descent Loss\")\n",
     "ax[1].legend([\"Train Loss\", \"Test Loss\"])\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
@@ -306,7 +309,7 @@
     "loss_test = []\n",
     "\n",
     "iterations = 100\n",
-    "alpha = 0.9\n",
+    "alpha = 1.5\n",
     "\n",
     "\n",
     "for _ in range(iterations):\n",
@@ -316,66 +319,230 @@
     "    test_loss = LR.loss(X_test, y_test)\n",
     "    loss_test.append(test_loss.item())\n",
     "    \n",
+    "    print(\"Train Loss: \", train_loss.item())\n",
     "    opts.step(X_train, y_train, alpha)\n",
     "\n",
     "    \n",
     "# Plotting the loss\n",
-    "fig, ax = plt.subplots(figsize=(6, 6))  # Single axes, adjust figsize if needed\n",
+    "fig, ax = plt.subplots(figsize=(6, 6))  \n",
     "ax.plot(torch.arange(1, iterations + 1), loss_train, color=\"black\")\n",
     "ax.plot(torch.arange(1, iterations + 1), loss_test, color=\"orange\")\n",
     "ax.set_xlabel(\"Iterations\")\n",
     "ax.set_ylabel(\"Loss\")\n",
     "ax.set_title(\"Loss vs Iterations\")\n",
-    "ax.legend([\"Train Loss\", \"Test Loss\"])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21",
-   "metadata": {},
-   "source": [
-    "## Adam Optimizer"
+    "ax.legend([\"Train Loss\", \"Test Loss\"])\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adam import LogisticRegression, AdamOptimizer\n",
+    "alphas = torch.linspace(0.01, 5.0, 50)  # Range of alpha values\n",
+    "final_losses = []\n",
     "\n",
-    "LR = LogisticRegression() \n",
-    "adam = AdamOptimizer(LR)\n",
+    "for alpha in alphas:\n",
+    "    try:\n",
+    "        # Re-initialize model for each run\n",
+    "        LR = LogisticRegression()\n",
+    "        # LR.w = torch.zeros(X_train.shape[1])  # or random init\n",
+    "        opt = NewtonOptimizer(LR)\n",
+    "        \n",
+    "        for _ in range(10):  # Few steps to test stability\n",
+    "            opt.step(X_train, y_train, alpha)\n",
+    "        \n",
+    "        loss = LR.loss(X_train, y_train).item()\n",
+    "        final_losses.append(loss)\n",
+    "    except Exception as e:\n",
+    "        # Divergence or singular matrix → record as NaN\n",
+    "        final_losses.append(float('nan'))\n",
     "\n",
-    "loss_train = []\n",
-    "loss_test = []\n",
+    "# Convert to tensor for plotting\n",
+    "final_losses = torch.tensor(final_losses)\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(alphas, final_losses, marker='o', linestyle='-')\n",
+    "plt.xlabel(\"Alpha (step size)\")\n",
+    "plt.ylabel(\"Final Train Loss\")\n",
+    "plt.title(\"Effect of Step Size on Newton's Method Stability\")\n",
+    "plt.yscale(\"log\")  # Optional: helps show divergence\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "This model converges for all alpha's from up to 1. When alpha goes above 1, the model returns an error relating to the calculation the  weight update."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23",
+   "metadata": {},
+   "source": [
+    "## Adam Optimizer\n",
+    "### Test Adam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from adam import AdamOptimizer\n",
+    "\n",
+    "# Adam optimizer test\n",
+    "\n",
     "\n",
     "iterations = 100\n",
-    "alpha = 0.9\n",
+    "batch_size = 40\n",
     "\n",
-    "n = X_train.shape[0]\n",
-    "for _ in range(iterations):\n",
-    "    \n",
-    "    \n",
-    "    train_loss = LR.loss(X_train, y_train)\n",
-    "    loss_train.append(train_loss.item())\n",
-    "    \n",
-    "    test_loss = LR.loss(X_test, y_test)\n",
-    "    loss_test.append(test_loss.item())\n",
-    "    \n",
-    "    adam.step(X_train, y_train, alpha)\n",
+    "alphas = [0.001, 0.01, 0.03, 0.1]\n",
+    "adam_losses_dict = {}\n",
+    "for alpha in alphas:\n",
+    "    LRA = LogisticRegression()\n",
+    "    adam = AdamOptimizer(LRA)\n",
+    "    adam_losses = []\n",
+    "    for _ in range(iterations):\n",
+    "        train_loss = LRA.loss(X_train, y_train)\n",
+    "        adam_losses.append(train_loss.item())\n",
+    "        adam.optim(X_train, y_train, batch_size=batch_size, alpha=alpha)\n",
+    "    adam_losses_dict[alpha] = adam_losses\n",
     "\n",
+    "\n",
+    "# SGD (minibatch) test for different step sizes\n",
+    "\n",
+    "grad_losses_dict = {}\n",
+    "\n",
+    "for alpha in alphas:\n",
+    "    LRG = LogisticRegression()\n",
+    "    grad = GradientDescentOptimizer(LRG)\n",
+    "    grad_losses = []\n",
+    "    for _ in range(iterations):\n",
+    "        train_loss = LRG.loss(X_train, y_train)\n",
+    "        grad_losses.append(train_loss.item())\n",
+    "        grad.step(X_train, y_train, alpha=alpha, beta=0.0, mini_batch=True)\n",
+    "    grad_losses_dict[alpha] = grad_losses\n",
     "    \n",
     "# Plotting the loss\n",
-    "fig, ax = plt.subplots(figsize=(6, 6))  # Single axes, adjust figsize if needed\n",
-    "ax.plot(torch.arange(1, iterations + 1), loss_train, color=\"black\")\n",
-    "ax.plot(torch.arange(1, iterations + 1), loss_test, color=\"orange\")\n",
-    "ax.set_xlabel(\"Iterations\")\n",
-    "ax.set_ylabel(\"Loss\")\n",
-    "ax.set_title(\"Loss vs Iterations\")\n",
-    "ax.legend([\"Train Loss\", \"Test Loss\"])\n"
+    "fig, ax = plt.subplots(1, 2, figsize=(12, 6))  \n",
+    "for alpha, losses in adam_losses_dict.items():\n",
+    "    ax[0].plot(torch.arange(1, iterations + 1), losses, label=f\"Adam (α={alpha})\")\n",
+    "ax[0].set_xlabel(\"Iterations\")\n",
+    "ax[0].set_ylabel(\"Loss\")\n",
+    "ax[0].set_title(\"Adam Optimizer Loss\")\n",
+    "ax[0].legend()\n",
+    "\n",
+    "for alpha, losses in grad_losses_dict.items():\n",
+    "    ax[1].plot(torch.arange(1, iterations + 1), losses, label=f\"Grad (α={alpha})\")\n",
+    "ax[1].set_xlabel(\"Iterations\")\n",
+    "ax[1].set_ylabel(\"Loss\")\n",
+    "ax[1].set_title(\"Gradient Descent Loss\")\n",
+    "ax[1].legend()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
+   "metadata": {},
+   "source": [
+    "This test compares the performance of the Adam optimizer and mini-batch gradient descent on logistic regression. For each optimizer, the code tests four learning rates (α = 0.001, 0.01, 0.03, 0.1) over 100 iterations, recording the training loss at each step. Adam uses a batch size of 40, while SGD uses mini-batches with no momentum. The results show that Adam consistently shows faster and smoother convergence across all learning rates compared to SGD, which converges more slowly and is more sensitive to the choice of α. This demonstrates Adam’s advantage in stability and speed for this classification task. Both struggle to converge on low alphas such as 0.01."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "### Newton vs Adam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import time\n",
+    "\n",
+    "target_loss = 0.3\n",
+    "alpha = 0.03\n",
+    "\n",
+    "\n",
+    "# Adam optimizer\n",
+    "LRA = LogisticRegression() \n",
+    "adam = AdamOptimizer(LRA)\n",
+    "\n",
+    "adam_loss = float('inf')  # large initial value\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "\n",
+    "while adam_loss > target_loss:\n",
+    "    # Compute current loss\n",
+    "    train_loss = LRA.loss(X_train, y_train)\n",
+    "    adam_loss = train_loss.item()\n",
+    "    # print(f\"[Adam] Current loss: {adam_loss:.4f}\")\n",
+    "    \n",
+    "    # Perform one round of updates\n",
+    "    adam.optim(X_train, y_train, batch_size=40, alpha=alpha)\n",
+    "\n",
+    "end = time.perf_counter()\n",
+    "print(f\"Adam optimizer took {end - start:.4f} seconds\")\n",
+    "print(f\"Final Adam loss: {LRA.loss(X_train, y_train).item():.4f}\")\n",
+    "\n",
+    "# Newton Optimizer\n",
+    "LRN = LogisticRegression()\n",
+    "newton = NewtonOptimizer(LRN)\n",
+    "\n",
+    "newton_loss = float('inf')  # large initial value\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "\n",
+    "while newton_loss > target_loss:\n",
+    "    # Compute current loss\n",
+    "    train_loss = LRN.loss(X_train, y_train)\n",
+    "    newton_loss = train_loss.item()\n",
+    "    # print(f\"[Newton] Current loss: {newton_loss:.4f}\")\n",
+    "    # Perform one round of updates\n",
+    "    newton.step(X_train, y_train, alpha)\n",
+    "\n",
+    "end = time.perf_counter()\n",
+    "print(f\"Newton optimizer took {end - start:.4f} seconds\")\n",
+    "print(f\"Final Newton loss: {LRN.loss(X_train, y_train).item():.4f}\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28",
+   "metadata": {},
+   "source": [
+    "In the above code, the model was trained using Adam and Newton optimizer with the goal of reducing the training loss below a target value of 0.3. Both optimizers iteratively updated the model parameters, with Adam using adaptive learning rates and mini-batches, while Gradient Descent used momentum and mini-batch updates. The results showed that Adam achieved a lower final loss (0.2379) but took longer to converge (0.1134 seconds), whereas Gradient Descent was significantly faster (0.0062 seconds) but only marginally met the loss target (0.2989). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "## Discussion\n",
+    "\n",
+    "The experiments show that different optimizers can perform better in different situations. Newton’s Method achieved faster convergence than standard gradient descent in terms of iteration count but when alpha became really large it was unable to converge. Gradient descent methods, while slower, offer greater stability across a wider range of learning rates. Adam strikes a balance, providing both great loss rate and rapid convergence. It was faster the mini-batch gradient descent but slower than Newton. In both situations, it had the better loss."
    ]
   }
  ],
